--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">EOG Interface (2-ch)</string>
-    <string name="main_activity_title">EOG Interface Demo (2ch)</string>
+    <string name="app_name">EOG Interface</string>
+    <string name="main_activity_title">EOG 2-Channel Interface</string>
     <string name="settings_activity_title">Support Preferences</string>
     <string name="ble_not_supported">BLE is not supported</string>
     <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
